_______________________________________________________________________________
2013-03-10 Net-HTTP 6.06

Jesse Luehrs (1):
      IO::Socket::SSL doesn't play well with select() [RT#81237]



_______________________________________________________________________________
2012-11-10 Net-HTTP 6.05

Gisle Aas (1):
      Convert to Test::More style and disable test on Windows [RT#81090]

Marinos Yannikos (1):
      SSL broken for some servers [RT#81073]



_______________________________________________________________________________
2012-11-08 Net-HTTP 6.04

Gisle Aas (3):
      Simpler handling of double chunked [RT#77240]
      Check for timeouts before reading [RT#72676]
      Fake can_read

Dagfinn Ilmari Mannsåker (1):
      Fix chunked decoding on temporary read error [RT#74431]

Eric Wong (1):
      NB: set http_bytes if read_entity_body hits EAGAIN on first read

Jay Hannah (1):
      chunked,chunked is invalid, but happens. :( Ignore all but the first. [RT#77240]



_______________________________________________________________________________
2012-02-16 Net-HTTP 6.03

Restore blocking override for Net::SSL [RT#72790]

Restore perl-5.6 compatiblity.


_______________________________________________________________________________
2011-11-21 Net-HTTP 6.02

Don't disable blocking method [RT#72580]
Don't stop on unrecognized Makefile.PL arguments [RT#68337]
Document Net:HTTPS [RT#71599]



_______________________________________________________________________________
2011-03-17 Net-HTTP 6.01

Don't run live test by default.  Run 'perl Makefile.PL --live-tests' to enable.
More relaxed apache test; should pass even if proxies has added headers.



_______________________________________________________________________________
2011-02-27 Net-HTTP 6.00

Initial release of Net-HTTP as a separate distribution. There are no code
changes besides incrementing the version number since libwww-perl-5.837.
